<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="menu">На главный экран</string>
    <string name="err"> Произошла ошибка соединения с сервером</string>
    <string name="tut"> Нажмите на кнопку следующее задание для того, чтобы начать.</string>
    <string name="app_name">Помощь с ЕГЭ</string>
    <string name="Task_1">Задание 1-3</string>
    <string name="Task_2">Задание 4</string>
    <string name="Task_3">Задание 5</string>
    <string name="Task_4">Задание 6</string>
    <string name="Task_5">Задание 7</string>
    <string name="Task_6">Задание 8</string>
    <string name="Task_7">Задание 9</string>
    <string name="Task_8">Задание 10</string>
    <string name="Task_9">Задание 11</string>
    <string name="Task_10">Задание 12</string>
    <string name="Task_11">Задание 13</string>
    <string name="Task_12">Задание 14</string>
    <string name="Task_13">Задание 15</string>
    <string name="Task_14">Задание 16</string>
    <string name="Task_15">Задание 17</string>
    <string name="Task_16">Задание 18</string>
    <string name="Task_17">Задание 19</string>
    <string name="Task_18">Задание 20</string>
    <string name="Task_19">Задание 21</string>
    <string name="Task_20">Задание 22</string>
    <string name="Task_21">Задание 23</string>
    <string name="Task_22">Задание 24</string>
    <string name="Task_23">Задание 25</string>
    <string name="Task_24">Задание 26</string>
    <string name="To_Tasks">К заданиям</string>
    <string name="ZDs">Ответ</string>
    <string name="next">Следующее задание</string>
    <string name="check">Проверить</string>
    <string name="Task1_3txtRU" tools:ignore="TypographyEllipsis">
        Для выполнения блока заданий 1-3 следует:\n
        1. Внимательно прочитать предложенный текст\n
        2. Заполнить пропуск подходящим по смыслу словом.\n
         Обычно требуемое слово - союз.\n
         Союзы бывают:\n
          Соединительные(такие как и, тоже, ни...ни)\n
          Противительные(такие как Но, а, однако)\n
          Разделительные(Или, либо, то ли...то ли)\n
          Сопоставительные(Как...Так, не только... но и)\n
          Пояснительные(а именно, то есть, как-то)\n
          Присоединительные(И то, а то, да и)\n
         Местоимения:\n
          Личные(Я, ты, мы)\n
          Указательные(этот, эта, эти)\n
          Вопросительные(кто, чей, что)\n
          Отрицательные(никто, ничто, никакой)\n
          Неопределенные(кто-то, что-то, кое-что)\n
        3. Выписать или понять смысл текста.\n
        4. Выполнить задание 1. Для этого нужно подобрать:
          Вариант ответа не противоречащий смыслу исходного текста
          Вариант ответа содержащий в себе всю важную информацию текста
          Вариант ответа не содержащий в себе лишней информации\n
        5. Выполнить задание №3. Обычно подходящее по смыслу значение
           имеет пример, подставыив который в контекст получится
           верное по смыслу предложение.
    </string>
    <string name="Task4txtRU" tools:ignore="TypographyEllipsis">
        Задание 4 - задание про ударения.\n
        1. Ударение в иноязычных словах ставится туда куда оно ставилось изначально.\n
        2. Большинство существительных имеют неподвижное ударение на основе.\n
          Неподвижное ударение на окончании есть у существительных с суффиксами
          -Ак, -Арь, -Ач, -Ич, -Ун, -ствО, -ьЁ, -изнА, -отА, -отнЯ.\n
        3. В множественном числе И. П. у существительных окончание падает на А.\n
        4. Особые правила:\n
          а) На пОрты: пОрты, аэропОрты, авиапОрты\n
          б) На вОд: газопровОд, нефтепровОд, мусоропровОд\n
          в) на лОг: каталОг, диалОг, монолОг(исключение анАлог)\n
          г) на мЕтр: киломЕтр, сантимЕтр\n
          д) на зЫв: созЫв, призЫв, отзЫв(но Отзыв на что-то)\n
          е) на Яр: школЯр, столЯр, доЯр\n
        5. Некоторые слова с неочевидным ударением:\n
          бАнты          анАлог            вероисповЕдание\n
          тОрты          бухгАлтеров       новостЕй\n
          шАрфы          граждАнство       еретИк\n
          срЕдства       досУг\n
          Иксы           недУг\n
          крАны          корЫсть\n
          кОнусы         кремЕнь\n
          лЕкторы        лыжнЯ\n
          пОручни        намЕрение\n
          мЕстностей     нарОст\n
          пОчестей       придАное\n
          чЕлюстей       сирОты\n
          бОроду         тамОжня\n
          знАчимость     цепОчка\n
          нЕдруг\n
          нЕнависть\n
          нОгтя\n
          Отрочество\n
          свЁкла\n
          стАтуя\n
          цЕнтнер\n
          \n
        В прилагательных:\n
          1. В прилагательных на лИва ударение падает на И\n
          2. В кратких прилагательных Ж. Р ударение падает на последний слог
             (кроме красИва).\n
          3. таблица:\n
            кУхонный    оптОвый      мозаИчный\n
            слИвовый    прожОрлива\n
            знАчимый\n
        В глаголах:\n
          1) Ударение падает на Ить, Ать, Ять, ировАть\n
          кроме: опОшлить\n
          2) В глаголах прошедшего времени обычно падает на тот же слог, что и инфинитиве\n
          3)У глаголов класть, красть, красться, слать, послать, отослать ударение в форме женского рода\n
            прошедшего времени НЕ падает на окончание, а остаётся на основе\n
          4)В глаголах, образованных от имён прилагательных, ударение чаще всего падает на -ИТЬ:\n
          5)В возвратных глаголах ударение в форме прошедшего времени часто переходит на окончание\n
            или суффикс (в глаголах прошедшего времени мужского рода):\n
          6)Деепричастия часто имеют ударение на том же слоге,\n
            что и в инфинитиве глагола, от которого они образованы\n
    </string>
    <string name="Task5txtRU" tools:ignore="TypographyEllipsis">
        Паронимы - это слова, частично схожие в написании и произношении, но разные или частично схожие по значению.\n
        За различие в значениях в паронимах отвечают суффиксы и приставки. Можно попробовать изменить приставку или суффикс в слове, тогда вы возможно получите искомый пароним.\n
        Все паронимы можно условно разделить на:\n
        1) Корневые\n
        2) Приставочные\n
        3) Суффиксальные\n
        4) Смешанные\n
        В корневых изменяется корень, в приставочных - приставка, в суффиксальных - суффикс и в смешанных - несколько частей слова.
    </string>
    <string name="Task6txtRU" tools:ignore="TypographyEllipsis">
        В задании обычно просят заменить/удалить неверно употребленное слово.
        Для успешного выполнения задания необходимо:\n
        понимать лексическое значение слова и употреблять его в соответствии с данным значением\n
        учитывать особенности сочетаемости слов\n
        правильно употреблять синонимы, антонимы и омонимы\n
        учитывать сферу употребления лексики и стилистическую окраску.\n
        Типы ошибок:
        Плеоназм(Главная суть, предчувствовать заранее, необычный феномен, первая премьера.)\n
        Тавтология(Проливной ливень, редактор редактирует, писатель пишет, спросить вопрос.)\n
        Нарушение лексической сочетаемости(Он выполнил подвиг (совершил подвиг). Пьеса играет большое значение (имеет значение или играет роль). После выхода книги он заслужил известность (приобрел известность/заслужил уважение).)\n
        Ошибки в употреблении фразеологизмов (устойчивых выражений)(
        Антон любит мастерить, у него серебряные руки (устойчивое выражение - золотые руки).)
        Неправильное употребление иноязычных слов, неологизмов, устаревших слов.(
        Этот аппарат своей конструкцией не был похож ни на один доселе известный самолёт (до сих пор).)\n
        Алогизм (соединение несовместимых понятий)(
        Новый спектакль обречен на успех (обречен на провал). Он мой заклятый друг (заклятый враг/лучший друг). Из-за хорошей погоды мы пошли гулять в парк (благодаря хорошей погоде).)\n
        Неточный подбор синонима(
        Теннис культивируется в нашем городе с конца прошлого века (развивается в городе).)\n
        Употребление паронимов(
        Каменистые ступеньки (каменные), высотная гора (высокая).)\n
    </string>
    <string name="Task7txtRU" tools:ignore="TypographyEllipsis">
        Требуется найти неверную форму слова.\n
        После того как ошибка будет найдена, не забудьте: вписать в окно ответа необходимо уже ИСПРАВЛЕННЫЙ вариант.\n
        Слова на ы:\n
        инструкторы, редакторы, лекторы, ректоры,конструкторы, прожекторы, секторы, инженеры, шофёры, бухгалтеры, диспетчеры,
        договоры, приговоры, плейеры, драйверы, принтеры\n
        На ля(ла):\n
        векселя, вензеля, кителя, штабеля, штемпеля, тополя, шомпола, колокола, купола\n
        Другие слова для запоминания\n
        слесари, токари, конюхи, возрасты, кремы, супы, грунты, лифты, порты, склады, торты, флоты, фронты, штабы, штурманы\n
        адреса (новоселов), века (Средние), года (мои года), колена (выделывать), корпуса (танковые), кренделя (выделывать),
        меха (одеваться в меха), мужья (прочить в мужья), образа (святых), ордена (на груди), пропуска (временные), рода (войск),
        счета (оплатить), сыновья (и дочери), тона (светлые), учителя (профессия, в школе), хлеба (яровые)\n
        Но:\n
        адресы (поздравительные), веки (на веки вечные), годы (войны, девяностые), колени (больные), корпусы (часов), крендели (вкусные), мехи (кузнечные), мужи (Отечества, ученые), образы (литературные), ордены (Тевтонский)
        пропуски (занятий), роды (и виды, древние), счеты (свести), сыны (Отечества), тоны (сердца), учители (великие учители человечества), хлебы (печь формовые)
    </string>
    <string name="Task8txtRu">
        Требуется сопоставить ошибки и предложения.
    </string>
    <string name="Task9txtRu">
        Требуется найти чередующуюся/непроверяемую/проверяемую гласную букву в корне.
    </string>
    <string name="Task10txtRu">
        Найти слова, в которых пропущена одна и та же буква в приставке.
    </string>

    <string name="Task11txtRu">
        Найти слова, в которых пропущена одна и та же буква в суффиксе.
    </string>

    <string name="Task12txtRu">
        Найти слова, в которых пропущена одна и та же буква в корне слова.
    </string>

    <string name="Task13txtRu">
        Слитное/раздельное написание НЕ со словом.
    </string>
    <string name="Task14txtRu">
        Слитное/раздельное написание слов.
    </string>
    <string name="Task15txtRu">
        Одна/две буквы Н.
    </string>
    <string name="Task16txtRu">
        Найти предложения с одной запятой.
    </string>
    <string name="Task17txtRu">
        Расставить запятые(обычно около причастных/деепричастных оборотов)
    </string>
    <string name="Task18txtRu">
        Запятые при вводных словах
    </string>
    <string name="Task19txtRu">
        Запятые в ССП и СПП
    </string>
    <string name="Task20txtRu">
        Все запятые
    </string>
    <string name="Task21txtRu">
        Правила постановки запятых/тире/двоеточий.
    </string>
    <string name="Task22txtRu">
        Внимательное чтение текста.
    </string>
    <string name="Task23txtRu">
        Знание что такое описание/повествование/рассуждение.
    </string>
    <string name="Task24txtRu">
        Синоним.
    </string>
    <string name="Task25txtRu">
        Связь предложений.
    </string>
    <string name="Task26txtRu">
        Приемы речи.
    </string>
</resources>